[tool.poetry]
name = "container-visualizer"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <furkan.ercan@b2metric.com>"]
readme = "README.md"
packages = [{include = "container_visualizer"}]

[tool.poetry.dependencies]
python = "^3.8"
docker = "^6.1.2"
click = "^8.1.3"
plotext = "^5.2.8"
pytest = "^7.3.1"
pendulum = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
